# deepiri-training-orchestrator

./: LICENSE  README.md  pyproject.toml
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml  release.yml
data/metadata/: data_version.json  dataset_lineage.json
scripts/: install.sh
src/deepiri_training_orchestrator/: __init__.py  callbacks.py  config.py  datasets.py  distributed.py  feedback.py  orchestrator.py  reproducibility.py  tracking.py
src/deepiri_training_orchestrator/adapters/: __init__.py  hf_trainer.py
tests/: test_datasets_facade.py  test_distributed.py  test_orchestrator.py  test_reproducibility.py  test_v02.py
