[tool.poetry]
name = "deepiri-training-orchestrator"
version = "0.1.0"
description = "Training orchestration and reproducibility: seeding, config fingerprinting, MLflow/W&B tracking, and callback-based training loops."
authors = ["Team Deepiri"]
readme = "README.md"
license = "MIT"
packages = [{ include = "deepiri_training_orchestrator", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
torch = "^2.0.0"
mlflow = ">=2.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
