[tool.poetry]
name = "deepiri-training-orchestrator"
version = "0.4.0"
description = "Training orchestration and reproducibility: seeding, config fingerprinting, MLflow/W&B tracking, dataset-processor integration, and callback-based training loops."
authors = ["Team Deepiri"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "deepiri_training_orchestrator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.1.0 || ^1.24.0"
torch = ">=2.8.0,<2.13.0"
mlflow = ">=3.11.1,<4.0"
pydantic = "^2.0"
deepiri-dataset-processor = { git = "https://github.com/Team-Deepiri/deepiri-dataset-processor.git", rev = "60a97b74b2cc4975ceab77c3438c4c692b09c5fa", extras = ["all"] }
deepiri-modelkit = { git = "https://github.com/Team-Deepiri/deepiri-modelkit.git", rev = "e5183706de2aac33929c401d7ec37270686dd937" }
wandb = { version = "^0.15", optional = true }
accelerate = { version = "^0.24", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
ruff = "^0.8.0"

[tool.poetry.extras]
modelkit = ["deepiri-modelkit"]
wandb = ["wandb"]
distributed = ["accelerate"]
full = ["deepiri-modelkit", "wandb", "accelerate"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
